--- a/messaging_app/messaging_app/deployment.yaml
+++ b/messaging_app/messaging_app/deployment.yaml
@@ -61,11 +61,23 @@ spec:
               key: SECRET_KEY
         startupProbe:
           httpGet:
-            path: /health
+            path: /
             port: 8000
-          initialDelaySeconds: 40
+          initialDelaySeconds: 60
           periodSeconds: 10
           failureThreshold: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8000
+          initialDelaySeconds: 45
+          periodSeconds: 20
 ---
 apiVersion: v1
 kind: Service
