--- a/messaging_app/messaging_app/deployment.yaml
+++ b/messaging_app/messaging_app/deployment.yaml
@@ -60,21 +60,18 @@ spec:
               name: messaging-secrets
               key: SECRET_KEY
         startupProbe:
-          httpGet:
-            path: /
+          tcpSocket:
             port: 8000
           initialDelaySeconds: 60
           periodSeconds: 10
           failureThreshold: 10
         readinessProbe:
-          httpGet:
-            path: /
+          tcpSocket:
             port: 8000
           initialDelaySeconds: 30
           periodSeconds: 10
         livenessProbe:
-          httpGet:
-            path: /
+          tcpSocket:
             port: 8000
           initialDelaySeconds: 45
           periodSeconds: 20
