--- a/messaging_app/Jenkinsfile
+++ b/messaging_app/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                 // Create virtual environment
                 sh 'python3 -m venv $VENV_DIR'
                 // Activate and install dependencies
-                sh '. $VENV_DIR/bin/activate && pip install -r messaging_app/requirements.txt'
+                sh '. $VENV_DIR/bin/activate && pip install -r requirements.txt'
             }
         }
 
