--- a/messaging_app/Jenkinsfile
+++ b/messaging_app/Jenkinsfile
@@ -1,40 +1,38 @@
 pipeline {
-    agent any  // Run this pipeline on any available Jenkins agent
+    agent any
 
     environment {
-        VENV_DIR = 'venv' // Virtual environment folder
+        PYTHON = '/usr/bin/python3'
     }
 
     stages {
-
-        stage('Clone Repo') {
+        stage('Clone Repository') {
             steps {
-                // Clone your repository
-                git branch: 'main', url: 'https://github.com/yetmgetaredahegn/alx-backend-python.git'
+                git branch: 'main',
+                    credentialsId: 'github-cred',
+                    url: 'https://github.com/yetmgetaredahegn/alx-backend-python.git'
             }
         }
 
-        stage('Setup Python Environment') {
+        stage('Install Dependencies') {
             steps {
-                // Create virtual environment
-                sh 'python3 -m venv $VENV_DIR'
-                // Activate and install dependencies
-                sh '. $VENV_DIR/bin/activate && pip install -r messaging_app/requirements.txt'
+                sh 'pip install -r messaging_app/requirements.txt'
             }
         }
 
         stage('Run Tests') {
             steps {
-                // Activate venv and run pytest
-                sh '. $VENV_DIR/bin/activate && pytest messaging_app/tests --junitxml=report.xml'
+                sh 'pytest messaging_app/tests/ --junitxml=report.xml'
+            }
+            post {
+                always {
+                    junit 'report.xml'
+                }
             }
         }
+    }
 
-        stage('Archive Test Report') {
-            steps {
-                // Collect test report in Jenkins
-                junit 'report.xml'
-            }
-        }
+    triggers {
+        none() // manual trigger only
     }
 }
