--- a/messaging_app/Jenkinsfile
+++ b/messaging_app/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
         stage('Install Dependencies') {
             steps {
-                sh 'pip install -r messaging_app/requirements.txt'
+                sh 'pip install -r requirements.txt'
             }
         }
 
