docker img push using jenkins

--- a/messaging_app/Jenkinsfile
+++ b/messaging_app/Jenkinsfile
@@ -3,6 +3,8 @@ pipeline {
 
     environment {
         PYTHON = '/usr/bin/python3'
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub-cred')
+        DOCKER_IMAGE = "yetmgetaredahegn/messaging_app"
     }
 
     stages {
@@ -40,6 +42,39 @@ pipeline {
             steps {
                 junit 'messaging_app/test-results.xml'
             }
+        }
+        stage('Build Docker Image') {
+            steps {
+                script {
+                    sh '''
+                        cd messaging_app
+                        docker build -t ${DOCKER_IMAGE}:${BUILD_NUMBER} .
+                    '''
+                }
+            }
+        }
+
+        stage('Push Docker Image') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub-cred', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh '''
+                            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                            docker tag ${DOCKER_IMAGE}:${BUILD_NUMBER} ${DOCKER_IMAGE}:latest
+                            docker push ${DOCKER_IMAGE}:${BUILD_NUMBER}
+                            docker push ${DOCKER_IMAGE}:latest
+                        '''
+                    }
+                }
+            }
+        }
+        
+    }
+    post {
+        always {
+            echo 'Cleaning up workspace...'
+            sh 'docker logout || true'
+            deleteDir()
         }
     }
 }
