--- a/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Django CI with MySQL
+name: Django CI
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -14,48 +14,72 @@ jobs:
       db:
         image: mysql:8.0
         env:
-          MYSQL_DATABASE: messaging_app_db
-          MYSQL_USER: app_user
-          MYSQL_PASSWORD: deAlto#Crack357
+          MYSQL_DATABASE: ${{ secrets.DB_NAME }}
+          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
           MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h localhost"
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }}"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
 
     env:
-      DEBUG: true
-      SECRET_KEY: django-insecure-oog$%vjzb8n1_wffhj4c!3mj-iaibw95c&_t#(x)1b^)c$hj5f
-      DB_NAME: messaging_app_db
-      DB_USER: app_user
-      DB_PASSWORD: deAlto#Crack357
-      DB_HOST: 127.0.0.1
-      DB_PORT: 3306
+      DEBUG: ${{ secrets.DEBUG }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r messaging_app/requirements.txt
 
       - name: Wait for MySQL to be ready
         run: |
-          echo "Waiting for MySQL..."
-          sleep 20
-          mysql -h 127.0.0.1 -uapp_user -pdeAlto#Crack357 -e "SHOW DATABASES;"
+          echo "Waiting for MySQL to start..."
+          for i in {1..20}; do
+            if mysqladmin ping -h"${{ secrets.DB_HOST }}" -u"${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" --silent; then
+              echo "MySQL is ready!"
+              break
+            fi
+            sleep 5
+          done
 
       - name: Run migrations and tests
+        working-directory: messaging_app
         run: |
           python manage.py migrate
           python manage.py test
+
+      - name: Run flake8 linting
+        run: |
+          pip install flake8
+          flake8 messaging_app --count --select=E9,F63,F7,F82 --show-source --statistics
+
+      - name: Generate coverage report
+        run: |
+          pip install coverage
+          coverage run manage.py test
+          coverage report
+          coverage xml
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.xml
